# SAM-TA

./: .gitignore  README.md  pyproject.toml
SAMTA/ext/sam/: SAM_predictor.py
configs/: config.yaml
configs/sam/: default.yaml  vit_b.yaml
demo/: sam_demo.py
